# manipulator_navigator

arm_navigation/costmap_nodelet/: CMakeLists.txt  package.xml  package.xml~
arm_navigation/costmap_xd/: CMakeLists.txt  CMakeLists.txt~  package.xml
arm_navigation/costmap_xd_gen/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
arm_navigation/move_arm_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
joint_state_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
joint_state_controller/launch/: ik_test.launch  ik_test.launch~  test.launch
joint_state_controller/param/: joints_setting.yaml  joints_setting.yaml~
joint_state_controller/src/: joint_state_controller.cpp  (+3 more)
my_controller/: CMakeLists.txt  CMakeLists.txt~  controllers.yaml ~  package.xml  package.xml~
my_moveit/: .setup_assistant  CMakeLists.txt  package.xml~
visualization/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
x_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
x_description/arm/: our_arm.urdf (another copy).xacro  our_arm.urdf (copy).xacro~  our_arm.urdf.xacro  our_arm.urdf.xacro~  our_arm_23.urdf.xacro~  our_arm_transmission.urdf.xacro
x_description/arm/meshes/collision/: arm_b.stl  finger.stl  hand.stl  mounting_base.stl  rotating_base.stl
x_description/arm/meshes/visual/: arm_a.stl  arm_c.stl  arm_d.stl
x_description/launch/: our_arm.launch  our_arm.launch~  our_arm_test.launch  our_arm_test.launch~  test.launch
x_description/rviz/: rviz.rviz  urdf_test.rviz
x_description/urdf/: rviz.rviz
(+103 files in other folders)
