<package>
  <name>x_description</name>
  <version>2.2.5</version>
  <description>
     X_description provides a complete 3D model of the X for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author>Melonee Wise</author>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
</package>
